# infrastructure-langflow

./: .env.example  .gitignore  AWS_ICONS.md  DEPENDENCIES.md  DESIGN.md  QUICK_REFERENCE.md  README.md  SETUP.md  WORKFLOW_GUIDE.md  aws_icon_mapping.json  fix_imports.py  fix_imports.sh  pyproject.toml  requirements-minimal.txt  requirements.txt  start-langflow.sh  verify-components.py
components/: README.md  __init__.py
components/aws/: __init__.py  alb.py  credentials.py  ecr.py  ecs_cluster.py  ecs_service.py  iam_role.py  security_group.py  service_discovery.py  vpc.py
components/deployment/: __init__.py  aws_deployer.py  terraform_generator.py  validator.py
components/utils/: __init__.py  aws_client.py  aws_icons.py
infrastructure_composer/: __init__.py
infrastructure_composer/application/: __init__.py
infrastructure_composer/application/use_cases/: __init__.py  create_vpc_use_case.py  validate_credentials_use_case.py
infrastructure_composer/domain/: __init__.py
infrastructure_composer/domain/entities/: __init__.py
infrastructure_composer/domain/repositories/: __init__.py  aws_repository.py
infrastructure_composer/domain/value_objects/: __init__.py  aws_credentials.py  environment.py
infrastructure_composer/infrastructure/: __init__.py
infrastructure_composer/infrastructure/aws/clients/: __init__.py  client_factory.py
infrastructure_composer/infrastructure/aws/repositories/: __init__.py  vpc_repository.py
infrastructure_composer/interfaces/: __init__.py
infrastructure_composer/interfaces/langflow/: __init__.py
infrastructure_composer/interfaces/langflow/adapters/: vpc_component_adapter.py
infrastructure_composer/interfaces/langflow/components/: __init__.py
infrastructure_composer/interfaces/langflow/components/aws/: __init__.py  alb.py  credentials.py  ecr.py  (+6 more)
infrastructure_composer/shared/: __init__.py  import_helper.py  models.py
(+1 files in other folders)
